# Deteccion-Defectos

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: calibrate_threshold_ad2.py  extract_features_ad2.py  infer_dataset_ad2.py  score_ad2.py  verify_mvtec.py  verify_mvtec_ad2.py
src/industrial_ad/: config.py
src/industrial_ad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/industrial_ad/anomaly/: patchcore_simple.py
src/industrial_ad/datasets/: __init__.py  mvtec.py  mvtec_ad2.py
src/industrial_ad/models/: backbones.py
