[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-ad"
version = "0.1.0"
description = "Inspección de defectos con Vision Transformers (ViT/Swin) - pipeline base"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=1.0.9",
  "opencv-python>=4.9.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pyyaml>=6.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]